fixed spacing in left pane headers

--- a/app/assets/stylesheets/diaedu/left_pane.css.scss
+++ b/app/assets/stylesheets/diaedu/left_pane.css.scss
@@ -13,6 +13,7 @@ div.diaedu-content {
       /* title */
       h3 {
         margin-top: 0;
+        margin-bottom: 5px;
         font-size: 13px;
 
         img {
